@@ -1,16 +1,9 @@
 #pragma once
 #include "xbapplicationex.h"
 
+#include "MusicInfoTag.h"
+#include "FileItem.h"
 #include "GUIWindowHome.h"
-#include "GUIWindowPrograms.h"
-#include "GUIWindowPictures.h"
-#include "GUIWindowFileManager.h"
-#include "GUIWindowVideoFiles.h"
-#include "GUIWindowVideoGenre.h"
-#include "GUIWindowVideoActors.h"
-#include "GUIWindowVideoYear.h"
-#include "GUIWindowVideoTitle.h"
-#include "GUIWindowSettings.h"
 #include "GUIDialogInvite.h"
 #include "GUIDialogHost.h"
 #include "GUIDialogKeyboard.h"
@@ -27,6 +20,15 @@
 #include "GUIDialogButtonMenu.h"
 #include "GUIDialogContextMenu.h"
 #include "GUIDialogMusicScan.h"
+#include "GUIWindowPrograms.h"
+#include "GUIWindowPictures.h"
+#include "GUIWindowFileManager.h"
+#include "GUIWindowVideoFiles.h"
+#include "GUIWindowVideoGenre.h"
+#include "GUIWindowVideoActors.h"
+#include "GUIWindowVideoYear.h"
+#include "GUIWindowVideoTitle.h"
+#include "GUIWindowSettings.h"
 #include "GUIWindowSystemInfo.h"
 #include "GUIWindowSettingsUICalibration.h"
 #include "GUIWindowSettingsScreenCalibration.h"
