@@ -1,6 +1,5 @@
 #pragma once
 #include "guiwindow.h"
-#include "FileItem.h"
 #include "programdatabase.h"
 
 class CGUIWindowPrograms :
