@@ -1,8 +1,6 @@
 #pragma once
 #include "GUIWindow.h"
 
-#include "FileItem.h"
-
 class CGUIWindowVideoOverlay: 	public CGUIWindow
 {
 public:
